2004-01-27  Yuuichi Teranishi  <teranisi@gohome.org>

	* mel-q.el (quoted-printable-external-decoder-option-to-specify-file): 
	Accept nil.
	(mime-write-decoded-region): If the value of the variable
	`quoted-printable-external-decoder-option-to-specify-file' is nil,
	write stdout to the output file.

	* mel-b-el.el (base64-external-decoder-option-to-specify-file): 
	Accept nil.
	(base64-write-decoded-region): If the value of the variable
	`base64-external-decoder-option-to-specify-file' is nil, write
	stdout to the output file.

2004-01-12  Daiki Ueno  <ueno@unixuser.org>

	* sasl.texi: Texinfo markup fixes.  From Jesper Harder
	<harder@ifa.au.dk>.

2004-01-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sha1-el.el (sha1-string-external): Use with-temp-buffer.

2004-01-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sha1-el.el (sha1-string-external): Make it can return a string
	in binary form.
	(sha1-region-external): Ditto.
	(sha1-string-internal): Ditto.
	(sha1-region-internal): Ditto.
	(sha1-region): Ditto.
	(sha1-string): Ditto.
	(sha1): Ditto.

2003-12-16  Simon Josefsson  <jas@extundo.com>

	* sha1-el.el (autoload): Don't use ignore-errors.
	(sha1-use-external): Use condition-case.  Suggested by Katsumi
	Yamaoka <yamaoka@jpl.org>.

2003-12-15  Simon Josefsson  <jas@extundo.com>

	* sha1-el.el (autoload): Ignore errors for
	executable-find. (XEmacs ecrypto does not require sh-script where
	executable.el is located.)
	(sha1-use-external): Likewise.

	* sha1-el.el (sha1): Add defgroup.
	(sha1-maximum-internal-length, sha1-program, sha1-use-external)
	(sha1-program): Use 'sha1sum' from GNU CoreUtils instead of OpenSSL.
	(sha1): Autoload.

2001-12-29  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* sha1-el.el (sha1-use-external): New variable.
	(sha1-region): Use it.
	(sha1-string): Ditto.

2004-01-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* ntlm.el (ntlm-string-as-unibyte): New macro.
	(ntlm-build-auth-response): Use it.

2004-01-05  Simon Josefsson  <jas@extundo.com>
